:sparkles: created feature to create beneficiary.
