# src/main/java/com/health/beneficiary/infrastructure/output/persistence/entity/DocumentEntity.java
@@ -1,0 +1,40 @@
+package com.health.beneficiary.infrastructure.output.persistence.entity;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.EntityListeners;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import java.time.LocalDateTime;
+import java.util.UUID;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.data.annotation.CreatedDate;
+import org.springframework.data.annotation.LastModifiedDate;
+import org.springframework.data.jpa.domain.support.AuditingEntityListener;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Entity
+@Table(name = "Document")
+@EntityListeners(AuditingEntityListener.class)
+public class DocumentEntity {
+  @Id
+  @GeneratedValue(strategy = GenerationType.AUTO)
+  private UUID id;
+
+  private UUID beneficiaryId;
+
+  private String tipoDocumento;
+
+  private String descricao;
+
+  @CreatedDate
+  private LocalDateTime dataInclusao;
+
+  @LastModifiedDate
+  private LocalDateTime dataAtualizacao;
+}
