# target/generated-sources/openapi/src/main/java/com/health/beneficiary/infrastructure/adapters/ApiUtil.java
@@ -1,19 +1,0 @@
-package com.health.beneficiary.infrastructure.adapters;
-
-import org.springframework.web.context.request.NativeWebRequest;
-
-import jakarta.servlet.http.HttpServletResponse;
-import java.io.IOException;
-
-public class ApiUtil {
-    public static void setExampleResponse(NativeWebRequest req, String contentType, String example) {
-        try {
-            HttpServletResponse res = req.getNativeResponse(HttpServletResponse.class);
-            res.setCharacterEncoding("UTF-8");
-            res.addHeader("Content-Type", contentType);
-            res.getWriter().print(example);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-}
