# target/generated-sources/openapi/src/main/java/com/health/beneficiary/infrastructure/adapters/data/BeneficiarySummary.java
@@ -1,108 +1,0 @@
-package com.health.beneficiary.infrastructure.adapters.data;
-
-import java.net.URI;
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import org.openapitools.jackson.nullable.JsonNullable;
-import java.time.OffsetDateTime;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.*;
-import org.hibernate.validator.constraints.*;
-import io.swagger.v3.oas.annotations.media.Schema;
-
-
-import java.util.*;
-import jakarta.annotation.Generated;
-
-/**
- * BeneficiarySummary
- */
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2024-06-13T11:42:47.949547-03:00[America/Sao_Paulo]")
-public class BeneficiarySummary {
-
-  private String id;
-
-  private String nome;
-
-  public BeneficiarySummary id(String id) {
-    this.id = id;
-    return this;
-  }
-
-  /**
-   * Get id
-   * @return id
-  */
-  
-  @Schema(name = "id", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("id")
-  public String getId() {
-    return id;
-  }
-
-  public void setId(String id) {
-    this.id = id;
-  }
-
-  public BeneficiarySummary nome(String nome) {
-    this.nome = nome;
-    return this;
-  }
-
-  /**
-   * Get nome
-   * @return nome
-  */
-  
-  @Schema(name = "nome", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("nome")
-  public String getNome() {
-    return nome;
-  }
-
-  public void setNome(String nome) {
-    this.nome = nome;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    BeneficiarySummary beneficiarySummary = (BeneficiarySummary) o;
-    return Objects.equals(this.id, beneficiarySummary.id) &&
-        Objects.equals(this.nome, beneficiarySummary.nome);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(id, nome);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class BeneficiarySummary {\n");
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
-    sb.append("    nome: ").append(toIndentedString(nome)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
